RTU server maybe works

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ path = "src/main.rs"
 anyhow = "1.0"
 clap = { version = "4.5.40", features = ["derive"] }
 tokio = { version = "1.46", features = ["full"] }
-tokio-modbus = { version = "0.16.1", features = ["tcp-server"] }
+tokio-modbus = { version = "0.16.1", features = ["tcp-server", "rtu-server"] }
+tokio-serial = "5.4"
