--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,8 @@ tokio-serial = "5.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
