--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -1,6 +1,10 @@
 [workspace]
 members = ["cargo:."]
 
+# default ubuntu-20.04 is not supported by github anymore
+[dist.github-custom-runners]
+global = "ubuntu-22.04"
+
 # Config for 'dist'
 [dist]
 # The preferred dist version to use in CI (Cargo.toml SemVer syntax)
